Fixed about us page not showing purpose.  Fixed spelling on Position in Contacts

--- a/styles/index.css
+++ b/styles/index.css
@@ -68,12 +68,17 @@
   margin-left: 0px !important;
 }
 
-/*********** gloabl ************/
+/*********** global ************/
 .ms-backgroundImage {
   /*background: url("/sites/gta/SiteAssets/starsStripesLighter.png");
   background-size: 100% 100%;
   background-repeat: no-repeat;*/
   background-color: #ddd;
+}
+
+.menu-item-text {
+  font-family: "Roboto Slab", "Segoe UI Light","Segoe UI","Segoe", sans-serif;
+  font-size: 1.1em;
 }
 
 .ms-core-pageTitle,
@@ -83,14 +88,29 @@
   color: #667cb9
 }
 
-.ms-srch-sb {
+/************ Search Box ************/
+/*.ms-srch-sb {
   background-color: #fff;
+  font-size: 16px;
+  font-family: "Roboto Slab", "Segoe Ui", "Helvetica", sans-serif;
+}
+
+.ms-srch-sb > input {
+  margin: 2px 0px 0px 7px;
+  letter-spacing: .8px;
+  width: 130px;
+}
+
+#SearchBox {
+  position: absolute;
+  top: 94px;
+  left: 20px;
 }
 
 #contentRow {
   padding-top: 0px;
 }
-
+*/
 /*********** container-links ************/
 main {
   position: relative;
@@ -161,8 +181,9 @@ nav {
   padding: 2px;
   margin: 2px 0px;
   text-decoration: none;
-  font-size: 1.34em;
-  color: #667cb9;
+  font-size: 1.25em;
+  color: #235283;
+  font-weight: 100;
 }
 
 .linksList a:hover {
